--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,6 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 .fa-gear {
@@ -14,7 +13,6 @@
 
 /* Body Styling */
 html, body {
-    height: 100%;
     display: flex;
     flex-direction: column;
     font-family: Arial, sans-serif;
@@ -51,15 +49,25 @@ hr {
 /* Main Content Styling */
 main {
     flex: 1;
+    margin-top: 52px;
     margin-left: 150px;
     padding: 20px;
 }
 
+/* each item */
+.item-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .item-template {
     display: none;
 }
 
 .food-item {
+    margin: 50px;
+    width: 350px;
+    height: 300px;
     background-color: #ffffff;
     padding: 20px;
     margin-bottom: 20px;
@@ -68,6 +76,7 @@ main {
 }
 
 .food-title {
+    text-align: center;
     font-size: 20px;
     font-weight: bold;
     color: #333333;
@@ -75,6 +84,7 @@ main {
 }
 
 .food-image {
+    align-self: center;
     width: 100%;
     border-radius: 10px;
     margin-bottom: 10px;
